--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body{
   overflow-x:hidden;
   cursor:none;
   opacity:0;
-  transition:opacity 1.2s cubic-bezier(.2,.7,.1,1);
+  transition:opacity 1.4s cubic-bezier(.2,.7,.1,1);
 }
 
 canvas{
@@ -82,30 +82,47 @@ nav span:hover{
   max-width:900px;
 }
 
-h1{
+/* ===== HERO TYPO ===== */
+.hero-line{
   font-size:clamp(70px,6vw,120px);
   font-weight:500;
   line-height:1.05;
+  display:block;
+  overflow:hidden;
 }
 
-p{
-  margin-top:30px;
-  font-size:18px;
-  color:#aaa;
-  max-width:600px;
-  line-height:1.6;
+.hero-line span{
+  display:inline-block;
+  transform:translateY(100%);
+  filter:blur(8px);
+  opacity:0;
+  transition:
+    transform 1.1s cubic-bezier(.2,.7,.1,1),
+    filter 1.1s cubic-bezier(.2,.7,.1,1),
+    opacity 1.1s ease;
 }
 
 /* ===== REVEAL ===== */
 .reveal{
   opacity:0;
   transform:translateY(60px);
-  transition:1.2s cubic-bezier(.2,.7,.1,1);
+  filter:blur(6px);
+  transition:1.4s cubic-bezier(.2,.7,.1,1);
 }
 
 .reveal.visible{
   opacity:1;
   transform:translateY(0);
+  filter:blur(0);
+}
+
+/* ===== TEXT ===== */
+p{
+  margin-top:40px;
+  font-size:18px;
+  color:#aaa;
+  max-width:600px;
+  line-height:1.6;
 }
 
 /* ===== FOOTER ===== */
@@ -132,8 +149,13 @@ footer{
 
 <section class="section">
   <div class="content">
-    <h1 id="heroTitle"></h1>
-    <p class="reveal">Material intelligence meets architectural clarity.</p>
+    <h1>
+      <span class="hero-line" id="line1"></span>
+      <span class="hero-line" id="line2"></span>
+    </h1>
+    <p class="reveal">
+      Material intelligence meets architectural clarity.
+    </p>
   </div>
 </section>
 
@@ -159,149 +181,133 @@ INDUSTRIAL DESIGN
 
 <script>
 
-/* ================= ENTRADA LIMPIA ================= */
+/* ================= ENTRADA ================= */
 
-window.addEventListener("load", () => {
-  document.body.style.opacity = "1";
+window.addEventListener("load",()=>{
+  document.body.style.opacity="1";
 });
 
 
 /* ================= CURSOR DINÁMICO ================= */
 
-const cursor = document.querySelector(".cursor");
+const cursor=document.querySelector(".cursor");
 
-let mouseX = 0;
-let mouseY = 0;
-let posX = 0;
-let posY = 0;
+let mx=0,my=0,px=0,py=0,lastX=0,lastY=0,velocity=0;
 
-let lastX = 0;
-let lastY = 0;
-let velocity = 0;
-
-document.addEventListener("mousemove", e => {
-  mouseX = e.clientX;
-  mouseY = e.clientY;
-
-  const dx = mouseX - lastX;
-  const dy = mouseY - lastY;
-  velocity = Math.sqrt(dx * dx + dy * dy);
-
-  lastX = mouseX;
-  lastY = mouseY;
+document.addEventListener("mousemove",e=>{
+  mx=e.clientX;
+  my=e.clientY;
+  const dx=mx-lastX;
+  const dy=my-lastY;
+  velocity=Math.sqrt(dx*dx+dy*dy);
+  lastX=mx;
+  lastY=my;
 });
 
-function animateCursor() {
+function cursorLoop(){
+  const speed=0.12+Math.min(velocity*0.02,0.35);
+  px+=(mx-px)*speed;
+  py+=(my-py)*speed;
+  cursor.style.left=px+"px";
+  cursor.style.top=py+"px";
+  requestAnimationFrame(cursorLoop);
+}
+cursorLoop();
 
-  const dynamicSpeed = 0.12 + Math.min(velocity * 0.02, 0.35);
 
-  posX += (mouseX - posX) * dynamicSpeed;
-  posY += (mouseY - posY) * dynamicSpeed;
+/* ================= HERO LINE ANIMATION ================= */
 
-  cursor.style.left = posX + "px";
-  cursor.style.top = posY + "px";
+const line1=document.getElementById("line1");
+const line2=document.getElementById("line2");
 
-  requestAnimationFrame(animateCursor);
+line1.textContent="Industrial";
+line2.textContent="Design";
+
+function animateLine(element, delay){
+  const letters=element.textContent.split("");
+  element.textContent="";
+  letters.forEach((char,i)=>{
+    const span=document.createElement("span");
+    span.textContent=char;
+    span.style.transitionDelay=(i*0.04+delay)+"s";
+    element.appendChild(span);
+  });
+
+  setTimeout(()=>{
+    element.querySelectorAll("span").forEach(span=>{
+      span.style.transform="translateY(0)";
+      span.style.filter="blur(0)";
+      span.style.opacity="1";
+    });
+  },100);
 }
 
-animateCursor();
-
-
-/* ================= HERO TYPE (MÁS RÁPIDO) ================= */
-
-const hero = document.getElementById("heroTitle");
-const text = "Industrial Design";
-
-text.split("").forEach((char, i) => {
-  const span = document.createElement("span");
-  span.textContent = char;
-  span.style.opacity = "0";
-  span.style.display = "inline-block";
-  span.style.transform = "translateY(40px)";
-  span.style.transition = `all .5s cubic-bezier(.2,.7,.1,1) ${i * 0.025}s`;
-  hero.appendChild(span);
-});
-
-setTimeout(() => {
-  hero.querySelectorAll("span").forEach(span => {
-    span.style.opacity = "1";
-    span.style.transform = "translateY(0)";
-  });
-}, 200);
+animateLine(line1,0.2);
+animateLine(line2,0.8);
 
 
 /* ================= SCROLL REVEAL ================= */
 
-const reveals = document.querySelectorAll(".reveal");
+const reveals=document.querySelectorAll(".reveal");
 
-const observer = new IntersectionObserver(entries => {
-  entries.forEach(entry => {
-    if (entry.isIntersecting) {
+const observer=new IntersectionObserver(entries=>{
+  entries.forEach(entry=>{
+    if(entry.isIntersecting){
       entry.target.classList.add("visible");
     }
   });
-}, { threshold: 0.2 });
+},{threshold:0.2});
 
-reveals.forEach(el => observer.observe(el));
+reveals.forEach(el=>observer.observe(el));
 
 
 /* ================= THREE BACKGROUND ================= */
 
-let scene = new THREE.Scene();
+let scene=new THREE.Scene();
+let camera=new THREE.PerspectiveCamera(60,window.innerWidth/window.innerHeight,0.1,100);
+camera.position.z=4;
 
-let camera = new THREE.PerspectiveCamera(
-  60,
-  window.innerWidth / window.innerHeight,
-  0.1,
-  100
-);
-
-camera.position.z = 4;
-
-let renderer = new THREE.WebGLRenderer({ alpha: true });
-renderer.setSize(window.innerWidth, window.innerHeight);
-renderer.setPixelRatio(Math.min(window.devicePixelRatio, 2));
+let renderer=new THREE.WebGLRenderer({alpha:true});
+renderer.setSize(window.innerWidth,window.innerHeight);
+renderer.setPixelRatio(Math.min(window.devicePixelRatio,2));
 document.body.appendChild(renderer.domElement);
 
-let geometry = new THREE.IcosahedronGeometry(1.8, 2);
-
-let material = new THREE.MeshStandardMaterial({
-  wireframe: true,
-  color: 0xffffff,
-  transparent: true,
-  opacity: 0.05
+let geometry=new THREE.IcosahedronGeometry(1.8,2);
+let material=new THREE.MeshStandardMaterial({
+  wireframe:true,
+  color:0xffffff,
+  transparent:true,
+  opacity:0.05
 });
-
-let mesh = new THREE.Mesh(geometry, material);
+let mesh=new THREE.Mesh(geometry,material);
 scene.add(mesh);
 
-let light = new THREE.PointLight(0xffffff, 1);
-light.position.set(5, 5, 5);
+let light=new THREE.PointLight(0xffffff,1);
+light.position.set(5,5,5);
 scene.add(light);
 
-function animate() {
-  mesh.rotation.x += 0.0015;
-  mesh.rotation.y += 0.0015;
-  renderer.render(scene, camera);
+function animate(){
+  mesh.rotation.x+=0.0015;
+  mesh.rotation.y+=0.0015;
+  renderer.render(scene,camera);
   requestAnimationFrame(animate);
 }
-
 animate();
 
-window.addEventListener("resize", () => {
-  renderer.setSize(window.innerWidth, window.innerHeight);
-  camera.aspect = window.innerWidth / window.innerHeight;
+window.addEventListener("resize",()=>{
+  renderer.setSize(window.innerWidth,window.innerHeight);
+  camera.aspect=window.innerWidth/window.innerHeight;
   camera.updateProjectionMatrix();
 });
 
 
 /* ================= NAV SCROLL ================= */
 
-document.querySelectorAll("nav span").forEach(btn => {
-  btn.addEventListener("click", () => {
-    const index = btn.dataset.scroll;
+document.querySelectorAll("nav span").forEach(btn=>{
+  btn.addEventListener("click",()=>{
+    const index=btn.dataset.scroll;
     document.querySelectorAll(".section")[index]
-      .scrollIntoView({ behavior: "smooth" });
+      .scrollIntoView({behavior:"smooth"});
   });
 });
 
