--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,7 +24,7 @@ body{
   overflow-x:hidden;
   cursor:none;
   opacity:0;
-  transition:opacity 1.4s cubic-bezier(.2,.7,.1,1);
+  transition:opacity 1.2s cubic-bezier(.2,.7,.1,1);
 }
 
 canvas{
@@ -82,47 +82,54 @@ nav span:hover{
   max-width:900px;
 }
 
-/* ===== HERO TYPO ===== */
-.hero-line{
+h1{
   font-size:clamp(70px,6vw,120px);
   font-weight:500;
   line-height:1.05;
-  display:block;
-  overflow:hidden;
 }
 
-.hero-line span{
-  display:inline-block;
-  transform:translateY(100%);
-  filter:blur(8px);
-  opacity:0;
-  transition:
-    transform 1.1s cubic-bezier(.2,.7,.1,1),
-    filter 1.1s cubic-bezier(.2,.7,.1,1),
-    opacity 1.1s ease;
+h2{
+  font-size:32px;
+  font-weight:400;
+  margin-bottom:20px;
+}
+
+p{
+  margin-top:20px;
+  font-size:18px;
+  color:#aaa;
+  max-width:600px;
+  line-height:1.6;
+}
+
+/* ===== PORTFOLIO GRID ===== */
+.grid{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+  gap:40px;
+  margin-top:40px;
+}
+
+.project{
+  border-top:1px solid #222;
+  padding-top:20px;
+  transition:.4s;
+}
+
+.project:hover{
+  transform:translateY(-8px);
 }
 
 /* ===== REVEAL ===== */
 .reveal{
   opacity:0;
   transform:translateY(60px);
-  filter:blur(6px);
-  transition:1.4s cubic-bezier(.2,.7,.1,1);
+  transition:1.2s cubic-bezier(.2,.7,.1,1);
 }
 
 .reveal.visible{
   opacity:1;
   transform:translateY(0);
-  filter:blur(0);
-}
-
-/* ===== TEXT ===== */
-p{
-  margin-top:40px;
-  font-size:18px;
-  color:#aaa;
-  max-width:600px;
-  line-height:1.6;
 }
 
 /* ===== FOOTER ===== */
@@ -142,35 +149,57 @@ footer{
 <div class="cursor"></div>
 
 <nav>
-  <span data-scroll="0">Home</span>
-  <span data-scroll="1">Studio</span>
-  <span data-scroll="2">Contact</span>
+  <span data-scroll="0">Inicio</span>
+  <span data-scroll="1">Portfolio</span>
+  <span data-scroll="2">CV</span>
+  <span data-scroll="3">Contacto</span>
 </nav>
 
+<!-- ===== INICIO ===== -->
 <section class="section">
   <div class="content">
-    <h1>
-      <span class="hero-line" id="line1"></span>
-      <span class="hero-line" id="line2"></span>
-    </h1>
+    <h1 id="heroTitle"></h1>
+    <p class="reveal">Diseño industrial con enfoque arquitectónico y precisión estructural.</p>
+  </div>
+</section>
+
+<!-- ===== PORTFOLIO ===== -->
+<section class="section">
+  <div class="content">
+    <h1 class="reveal">Portfolio</h1>
+
+    <div class="grid reveal">
+      <div class="project">
+        <h2>BAORI</h2>
+        <p>Espacio colectivo modular.</p>
+      </div>
+      <div class="project">
+        <h2>NODE</h2>
+        <p>Sistema estructural minimal.</p>
+      </div>
+      <div class="project">
+        <h2>LUMORA</h2>
+        <p>Iluminación arquitectónica.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- ===== CV ===== -->
+<section class="section">
+  <div class="content">
+    <h1 class="reveal">CV</h1>
     <p class="reveal">
-      Material intelligence meets architectural clarity.
+      Formación en ingeniería de diseño industrial, experiencia en desarrollo
+      de producto, optimización estructural y diseño técnico.
     </p>
   </div>
 </section>
 
+<!-- ===== CONTACTO ===== -->
 <section class="section">
   <div class="content">
-    <h1 class="reveal">Spatial Systems</h1>
-    <p class="reveal">
-      Products conceived as controlled volumes, precise in proportion and silent in expression.
-    </p>
-  </div>
-</section>
-
-<section class="section">
-  <div class="content">
-    <h1 class="reveal">Contact</h1>
+    <h1 class="reveal">Contacto</h1>
     <p class="reveal">majorbori@gmail.com</p>
   </div>
 </section>
@@ -181,73 +210,65 @@ INDUSTRIAL DESIGN
 
 <script>
 
-/* ================= ENTRADA ================= */
-
+/* ===== ENTRADA LIMPIA ===== */
 window.addEventListener("load",()=>{
   document.body.style.opacity="1";
 });
 
-
-/* ================= CURSOR DINÁMICO ================= */
-
+/* ===== CURSOR DINÁMICO ===== */
 const cursor=document.querySelector(".cursor");
 
-let mx=0,my=0,px=0,py=0,lastX=0,lastY=0,velocity=0;
+let mouseX=0,mouseY=0;
+let posX=0,posY=0;
+let lastX=0,lastY=0;
+let velocity=0;
 
 document.addEventListener("mousemove",e=>{
-  mx=e.clientX;
-  my=e.clientY;
-  const dx=mx-lastX;
-  const dy=my-lastY;
+  mouseX=e.clientX;
+  mouseY=e.clientY;
+
+  const dx=mouseX-lastX;
+  const dy=mouseY-lastY;
   velocity=Math.sqrt(dx*dx+dy*dy);
-  lastX=mx;
-  lastY=my;
+
+  lastX=mouseX;
+  lastY=mouseY;
 });
 
-function cursorLoop(){
-  const speed=0.12+Math.min(velocity*0.02,0.35);
-  px+=(mx-px)*speed;
-  py+=(my-py)*speed;
-  cursor.style.left=px+"px";
-  cursor.style.top=py+"px";
-  requestAnimationFrame(cursorLoop);
+function animateCursor(){
+  const dynamicSpeed=0.12+Math.min(velocity*0.02,0.35);
+  posX+=(mouseX-posX)*dynamicSpeed;
+  posY+=(mouseY-posY)*dynamicSpeed;
+
+  cursor.style.left=posX+"px";
+  cursor.style.top=posY+"px";
+
+  requestAnimationFrame(animateCursor);
 }
-cursorLoop();
+animateCursor();
 
+/* ===== HERO TYPE RÁPIDO ===== */
+const hero=document.getElementById("heroTitle");
+const text="Industrial Design";
 
-/* ================= HERO LINE ANIMATION ================= */
+text.split("").forEach((char,i)=>{
+  const span=document.createElement("span");
+  span.textContent=char;
+  span.style.opacity="0";
+  span.style.display="inline-block";
+  span.style.transform="translateY(40px)";
+  span.style.transition=`all .5s cubic-bezier(.2,.7,.1,1) ${i*0.025}s`;
+  hero.appendChild(span);
+});
 
-const line1=document.getElementById("line1");
-const line2=document.getElementById("line2");
-
-line1.textContent="Industrial";
-line2.textContent="Design";
-
-function animateLine(element, delay){
-  const letters=element.textContent.split("");
-  element.textContent="";
-  letters.forEach((char,i)=>{
-    const span=document.createElement("span");
-    span.textContent=char;
-    span.style.transitionDelay=(i*0.04+delay)+"s";
-    element.appendChild(span);
+setTimeout(()=>{
+  hero.querySelectorAll("span").forEach(span=>{
+    span.style.opacity="1";
+    span.style.transform="translateY(0)";
   });
+},200);
 
-  setTimeout(()=>{
-    element.querySelectorAll("span").forEach(span=>{
-      span.style.transform="translateY(0)";
-      span.style.filter="blur(0)";
-      span.style.opacity="1";
-    });
-  },100);
-}
-
-animateLine(line1,0.2);
-animateLine(line2,0.8);
-
-
-/* ================= SCROLL REVEAL ================= */
-
+/* ===== SCROLL REVEAL ===== */
 const reveals=document.querySelectorAll(".reveal");
 
 const observer=new IntersectionObserver(entries=>{
@@ -260,11 +281,16 @@ const observer=new IntersectionObserver(entries=>{
 
 reveals.forEach(el=>observer.observe(el));
 
-
-/* ================= THREE BACKGROUND ================= */
-
+/* ===== THREE BACKGROUND ===== */
 let scene=new THREE.Scene();
-let camera=new THREE.PerspectiveCamera(60,window.innerWidth/window.innerHeight,0.1,100);
+
+let camera=new THREE.PerspectiveCamera(
+  60,
+  window.innerWidth/window.innerHeight,
+  0.1,
+  100
+);
+
 camera.position.z=4;
 
 let renderer=new THREE.WebGLRenderer({alpha:true});
@@ -273,12 +299,14 @@ renderer.setPixelRatio(Math.min(window.devicePixelRatio,2));
 document.body.appendChild(renderer.domElement);
 
 let geometry=new THREE.IcosahedronGeometry(1.8,2);
+
 let material=new THREE.MeshStandardMaterial({
   wireframe:true,
   color:0xffffff,
   transparent:true,
   opacity:0.05
 });
+
 let mesh=new THREE.Mesh(geometry,material);
 scene.add(mesh);
 
@@ -300,9 +328,7 @@ window.addEventListener("resize",()=>{
   camera.updateProjectionMatrix();
 });
 
-
-/* ================= NAV SCROLL ================= */
-
+/* ===== NAV SCROLL ===== */
 document.querySelectorAll("nav span").forEach(btn=>{
   btn.addEventListener("click",()=>{
     const index=btn.dataset.scroll;
