--- a/index.html
+++ b/index.html
@@ -120,16 +120,18 @@ p{
   transform:translateY(-8px);
 }
 
-/* ===== REVEAL ===== */
+/* ===== CINEMATIC REVEAL ===== */
 .reveal{
   opacity:0;
   transform:translateY(60px);
+  filter:blur(8px);
   transition:1.2s cubic-bezier(.2,.7,.1,1);
 }
 
 .reveal.visible{
   opacity:1;
   transform:translateY(0);
+  filter:blur(0px);
 }
 
 /* ===== FOOTER ===== */
@@ -247,7 +249,7 @@ function animateCursor(){
 }
 animateCursor();
 
-/* ===== HERO TYPE RÁPIDO ===== */
+/* ===== HERO TYPE CON BLUR CINEMÁTICO ===== */
 const hero=document.getElementById("heroTitle");
 const text="Industrial Design";
 
@@ -257,6 +259,7 @@ text.split("").forEach((char,i)=>{
   span.style.opacity="0";
   span.style.display="inline-block";
   span.style.transform="translateY(40px)";
+  span.style.filter="blur(8px)";
   span.style.transition=`all .5s cubic-bezier(.2,.7,.1,1) ${i*0.025}s`;
   hero.appendChild(span);
 });
@@ -265,6 +268,7 @@ setTimeout(()=>{
   hero.querySelectorAll("span").forEach(span=>{
     span.style.opacity="1";
     span.style.transform="translateY(0)";
+    span.style.filter="blur(0px)";
   });
 },200);
 
@@ -283,14 +287,12 @@ reveals.forEach(el=>observer.observe(el));
 
 /* ===== THREE BACKGROUND ===== */
 let scene=new THREE.Scene();
-
 let camera=new THREE.PerspectiveCamera(
   60,
   window.innerWidth/window.innerHeight,
   0.1,
   100
 );
-
 camera.position.z=4;
 
 let renderer=new THREE.WebGLRenderer({alpha:true});
@@ -299,14 +301,12 @@ renderer.setPixelRatio(Math.min(window.devicePixelRatio,2));
 document.body.appendChild(renderer.domElement);
 
 let geometry=new THREE.IcosahedronGeometry(1.8,2);
-
 let material=new THREE.MeshStandardMaterial({
   wireframe:true,
   color:0xffffff,
   transparent:true,
   opacity:0.05
 });
-
 let mesh=new THREE.Mesh(geometry,material);
 scene.add(mesh);
 
