--- a/index.html
+++ b/index.html
@@ -73,13 +73,15 @@ nav span:hover{
 .section{
   min-height:100vh;
   display:flex;
-  justify-content:center;
+  justify-content:center;   /* centra el bloque */
   align-items:center;
   padding:0 10%;
 }
 
 .content{
   max-width:900px;
+  width:100%;
+  text-align:left;          /* 🔴 CLAVE: todo alineado a la izquierda */
 }
 
 h1{
@@ -175,8 +177,7 @@ footer{
     <p class="reveal">
       Diseñadora industrial con formación técnica y sensibilidad arquitectónica.
       Trabajo desde la estructura, el material y la proporción, buscando soluciones
-      claras, funcionales y duraderas. Me interesa el diseño entendido como sistema,
-      donde cada decisión tiene un propósito.
+      claras, funcionales y duraderas.
     </p>
   </div>
 </section>
