--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 
 <style>
 
+/* ================= SISTEMA ================= */
 :root{
-  --page-width: 900px;
+  --column-width: 900px;
+  --column-padding: 20px;
 }
 
-/* ===== RESET ===== */
+/* ================= RESET ================= */
 *{
   margin:0;
   padding:0;
@@ -31,13 +33,14 @@ body{
   transition:opacity 1.2s cubic-bezier(.2,.7,.1,1);
 }
 
+/* ================= BACKGROUND ================= */
 canvas{
   position:fixed;
   inset:0;
   z-index:-1;
 }
 
-/* ===== CURSOR ===== */
+/* ================= CURSOR ================= */
 .cursor{
   position:fixed;
   width:8px;
@@ -49,7 +52,7 @@ canvas{
   z-index:1000;
 }
 
-/* ===== NAV ===== */
+/* ================= NAV ================= */
 nav{
   position:fixed;
   top:40px;
@@ -71,26 +74,26 @@ nav span{
 
 nav span:hover{ color:#fff; }
 
-/* ===== PAGE COLUMN (CLAVE) ===== */
+/* ================= COLUMNA MAESTRA ================= */
 .page{
-  max-width:var(--page-width);
+  max-width:var(--column-width);
   margin:0 auto;
-  padding:0 20px;
+  padding:0 var(--column-padding);
 }
 
-/* ===== SECTIONS ===== */
+/* ================= SECTIONS ================= */
 .section{
   min-height:100vh;
   display:flex;
   align-items:center;
 }
 
-/* HERO */
+/* ================= HERO ================= */
 .hero{
   text-align:center;
 }
 
-/* RESTO */
+/* ================= CONTENIDO ================= */
 .left{
   text-align:left;
 }
@@ -115,7 +118,7 @@ p{
   line-height:1.7;
 }
 
-/* ===== GRID ===== */
+/* ================= GRID ================= */
 .grid{
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
@@ -133,7 +136,7 @@ p{
   transform:translateY(-8px);
 }
 
-/* ===== CINEMATIC REVEAL ===== */
+/* ================= ANIMACIONES ================= */
 .reveal{
   opacity:0;
   transform:translateY(60px);
@@ -147,7 +150,7 @@ p{
   filter:blur(0);
 }
 
-/* ===== FOOTER ===== */
+/* ================= FOOTER ================= */
 footer{
   text-align:center;
   padding:100px 0;
@@ -171,7 +174,7 @@ footer{
   <span data-scroll="4">Contacto</span>
 </nav>
 
-<!-- ===== INICIO ===== -->
+<!-- ================= INICIO ================= -->
 <section class="section">
   <div class="page hero">
     <h1 id="heroTitle"></h1>
@@ -181,7 +184,7 @@ footer{
   </div>
 </section>
 
-<!-- ===== SOBRE MÍ ===== -->
+<!-- ================= SOBRE MÍ ================= -->
 <section class="section">
   <div class="page left">
     <h1 class="reveal">Sobre mí</h1>
@@ -193,7 +196,7 @@ footer{
   </div>
 </section>
 
-<!-- ===== PORTFOLIO ===== -->
+<!-- ================= PORTFOLIO ================= -->
 <section class="section">
   <div class="page left">
     <h1 class="reveal">Portfolio</h1>
@@ -215,7 +218,7 @@ footer{
   </div>
 </section>
 
-<!-- ===== CV ===== -->
+<!-- ================= CV ================= -->
 <section class="section">
   <div class="page left">
     <h1 class="reveal">CV</h1>
@@ -226,7 +229,7 @@ footer{
   </div>
 </section>
 
-<!-- ===== CONTACTO ===== -->
+<!-- ================= CONTACTO ================= -->
 <section class="section">
   <div class="page left">
     <h1 class="reveal">Contacto</h1>
@@ -240,12 +243,12 @@ INDUSTRIAL DESIGN
 
 <script>
 
-/* ===== ENTRADA ===== */
+/* ================= ENTRADA ================= */
 window.addEventListener("load",()=>{
   document.body.style.opacity="1";
 });
 
-/* ===== CURSOR ===== */
+/* ================= CURSOR ================= */
 const cursor=document.querySelector(".cursor");
 let mx=0,my=0,px=0,py=0,lx=0,ly=0,v=0;
 
@@ -264,7 +267,7 @@ document.addEventListener("mousemove",e=>{
   requestAnimationFrame(loop);
 })();
 
-/* ===== HERO TYPE ===== */
+/* ================= HERO TYPE ================= */
 const hero=document.getElementById("heroTitle");
 const text="Industrial Design";
 
@@ -287,13 +290,16 @@ setTimeout(()=>{
   });
 },200);
 
-/* ===== SCROLL REVEAL ===== */
-const obs=new IntersectionObserver(e=>{
-  e.forEach(x=>x.isIntersecting&&x.target.classList.add("visible"));
+/* ================= SCROLL REVEAL ================= */
+const observer=new IntersectionObserver(entries=>{
+  entries.forEach(e=>{
+    if(e.isIntersecting) e.target.classList.add("visible");
+  });
 },{threshold:0.2});
-document.querySelectorAll(".reveal").forEach(el=>obs.observe(el));
 
-/* ===== THREE BACKGROUND ===== */
+document.querySelectorAll(".reveal").forEach(el=>observer.observe(el));
+
+/* ================= THREE BACKGROUND ================= */
 const scene=new THREE.Scene();
 const camera=new THREE.PerspectiveCamera(60,innerWidth/innerHeight,0.1,100);
 camera.position.z=4;
@@ -331,9 +337,9 @@ window.addEventListener("resize",()=>{
   camera.updateProjectionMatrix();
 });
 
-/* ===== NAV ===== */
-document.querySelectorAll("nav span").forEach((b,i)=>{
-  b.onclick=()=>document.querySelectorAll(".section")[i]
+/* ================= NAV ================= */
+document.querySelectorAll("nav span").forEach((btn,i)=>{
+  btn.onclick=()=>document.querySelectorAll(".section")[i]
     .scrollIntoView({behavior:"smooth"});
 });
 
